some fixes, some frontend refinements, ...